test/libhyperion/syntaxTests/denominations/invalid_denomination_address.hyp
contract C {
	address a = Z11111122222333334444455555666667777788888 planck;
}
// ----
// ParserError 2314: (69-75): Expected ';' but got 'planck'
